[Refactoring] SonarLint